fixed covers

--- a/frontend/src/assets/styles/views/_board.scss
+++ b/frontend/src/assets/styles/views/_board.scss
@@ -145,7 +145,7 @@
         box-shadow: 0px 1px 0px 0px rgba(181, 181, 181, 0.79);
         position: relative;
         margin: 7px 5px;
-        
+
         &:hover {
             background-color: rgb(245, 245, 245);
 
@@ -246,7 +246,7 @@
     span {
         position: absolute;
         font-size: 22px;
-        top: 57px;
+        top: 52px;
         left: 101px;
         color: #7688a5;
     }
